src/test/ui/error-codes/E0033.stderr
error[E0423]: expected value, found trait `SomeTrait`
  --> $DIR/E0033.rs:6:37
   |
LL |     let trait_obj: &dyn SomeTrait = SomeTrait;
   |                                     ^^^^^^^^^ not a value

error[E0038]: the trait `SomeTrait` cannot be made into an object
  --> $DIR/E0033.rs:6:20
   |
LL |     let trait_obj: &dyn SomeTrait = SomeTrait;
   |                    ^^^^^^^^^^^^^^ `SomeTrait` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/E0033.rs:2:8
   |
LL | trait SomeTrait {
   |       --------- this trait cannot be made into an object...
LL |     fn foo();
   |        ^^^ ...because associated function `foo` has no `self` parameter
help: consider turning `foo` into a method by giving it a `&self` argument
   |
LL |     fn foo(&self);
   |            ^^^^^
help: alternatively, consider constraining `foo` so it does not apply to trait objects
   |
LL |     fn foo() where Self: Sized;
   |              ^^^^^^^^^^^^^^^^^

error[E0033]: type `&dyn SomeTrait` cannot be dereferenced
  --> $DIR/E0033.rs:10:9
   |
LL |     let &invalid = trait_obj;
   |         ^^^^^^^^ type `&dyn SomeTrait` cannot be dereferenced

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0033, E0038, E0423.
For more information about an error, try `rustc --explain E0033`.
